# neuroclaw-rs

./: README.md  clean.sh  comands.txt  last_spawn.timestamp  log.txt  run_pantheon.sh
agents/gen2/cain/: build.rs  log.txt  memory_cain.json  state.json
agents/gen2/cain/proto/: agent.proto
agents/gen2/cain/src/: runtime1.rs
agents/gen2/eve/: log.txt  memory_eve.json  state.json
agents/gen2/eve/src/: lib.rs  runtime2.rs
agents/gen2/lilith/: Cargo.toml  log.txt  memory_lilith.json  state.json
agents/gen2/lilith/src/: main.rs  runtime.rs  runtime.rs.working-god-v3
backups/: runtime-v0.10-pantheon-speaks-2025-02-11.txt  runtime.rs-2026-02-13-1622.txt  runtime.rs.working-btc
memory/: soul.md  tools.md
src/: main.rs  runtime.rs  system_prompt.txt
