[package]
name = "neuroclaw"
version = "0.1.0"
edition = "2021"

[lib]
name = "neuroclaw_core"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = ["transport", "codegen"] }
prost = "0.13"
tonic-reflection = { version = "0.12" }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"

# ←←← Вот чего не хватало
[build-dependencies]
tonic-build = "0.12"
